--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,218 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  color: #40514e;
+  margin: 0;
   text-align: center;
+  font-family: "Merriweather", serif;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h1 {
+  color: #66bfbf;
+  font-size: 5.625rem;
+  margin: 50px auto 0 auto;
+  font-family: "Sacramento", cursive;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+h2 {
+  color: #66bfbf;
+  font-family: "Montserrat", sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+  padding-bottom: 10px;
+}
+
+h3 {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+}
+
+p {
+  line-height: 2;
+}
+
+hr {
+  border: dotted #eaf6f6 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+
+a {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #eaf6f6;
+}
+
+/* Top Section */
+.hero {
+  background-color: #e4f9f5;
+  position: relative;
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+
+.hero-title {
+  font-size: 5rem;
+}
+
+.hero-subtitle {
+  font-size: 2rem;
+}
+
+.hero-cloud-top {
+  position: absolute;
+  right: 300px;
+  top: 40px;
+}
+
+.hero-cloud-bottom {
+  position: absolute;
+  left: 250px;
+  bottom: 300px;
+}
+
+.hero-mountain {
+  width: 100%;
+  max-width: 600px;
+}
+
+/* About Section */
+.about {
+  margin: 100px 0;
+}
+
+.about-image {
+  width: 150px;
+  border-radius: 50%;
+}
+
+.about-text {
+  width: 30%;
+  margin: auto;
+}
+
+/* Skills Section */
+.skills {
+  margin: 100px 0;
+}
+
+.skills-title {
+  font-size: 2.5rem;
+}
+
+.skills-container {
+  display: grid;
+  grid-template-columns: 0.5fr 1fr;
+  width: 50%;
+  margin: 100px auto 0 auto;
+  text-align: left;
+  row-gap: 2rem;
+}
+
+.skills-image {
+  width: 25%;
+}
+
+.skills-text {
+  font-size: 1.2rem;
+}
+
+.skills-image-chilli {
+  width: 50%;
+  margin-left: 30px;
+}
+
+/* Contact Section */
+.contact {
+  margin: 100px 0;
+}
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
+/* Footer */
+.footer {
+  background-color: #66bfbf;
+  padding: 50px 0 20px;
+}
+
+.footer-links {
+  color: #11999e;
+  font-family: "Montserrat", sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+.footer-links:hover {
+  color: #eaf6f6;
+}
+
+.footer-text {
+  color: #eaf6f6;
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+
+/* Buttons */
+.btn {
+  background: #11cdd4;
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  border-radius: 8px;
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 3.5rem;
   }
-  to {
-    transform: rotate(360deg);
+
+  h2 {
+    font-size: 2rem;
   }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .about-text,
+  .contact-message {
+    width: 80%;
   }
-}
 
-.card {
-  padding: 2em;
-}
+  .hero-cloud-top {
+    right: 150px;
+    top: 20px;
+    width: 100px;
+  }
 
-.read-the-docs {
-  color: #888;
+  .hero-cloud-bottom {
+    left: 100px;
+    bottom: 200px;
+    width: 100px;
+  }
+
+  .skills-container {
+    width: 80%;
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .skills-image,
+  .skills-image-chilli {
+    width: 50%;
+    margin: 20px auto;
+  }
 }
